--- a/src/res/css/app-default.scss
+++ b/src/res/css/app-default.scss
@@ -2,7 +2,10 @@
  /* General base color for style. */
 $base-color: #6699cc;
 /* Used for action buttons and active items. */
-$active-color: #ff9933;
+$active-color: #ff9933; 
+
+$list-active-color: #6699cc;
+
 /* The blue cloobster color */
 $cloobster-font-color: #1E4776;
 
