added info button displaying cloobster cockpit version

--- a/src/res/css/app-default.scss
+++ b/src/res/css/app-default.scss
@@ -32,6 +32,7 @@ $cloobster-font-color: #1E4776;
 @include pictos-iconmask('time');
 @include pictos-iconmask('volume_mute');
 @include pictos-iconmask('volume');
+@include pictos-iconmask('info_plain2');
 /*custom icons in res folder! */
 @include pictos-iconmask('exit');
 
