--- a/src/res/css/app-default.scss
+++ b/src/res/css/app-default.scss
@@ -3,6 +3,8 @@
 $base-color: #6699cc;
 /* Used for action buttons and active items. */
 $active-color: #ff9933; 
+$base-gradient: 'flat';
+$button-gradient: 'flat';
 
 $list-active-color: #6699cc;
 
@@ -80,7 +82,7 @@ $cloobster-font-color: #1E4776;
 	word-break: break-word;
 	/*box-shadow: 3px 3px 0.5em 0.1em gray;*/
 	/*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65))); /* Chrome,Safari4+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(3%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.5)));
+	/*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(3%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.5)));*/
 }
 
 .spot div {
@@ -109,8 +111,8 @@ $cloobster-font-color: #1E4776;
 }
 
 .spotitem-pressed {
-	/*background-color: rgb(100,100,100) !important;*/
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.5)), color-stop(97%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0)));
+	background-color: lightgray !important;
+	/*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.5)), color-stop(97%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0)));*/
 }
 
 .spotSelected {
@@ -214,9 +216,6 @@ $cloobster-font-color: #1E4776;
 	background-color: #C3C3C3;
 	margin-bottom: 0.5em;
 	padding-bottom: 0.3em;
-	border-bottom-right-radius: 0.2em;
-	border-bottom-left-radius: 0.2em;
-	box-shadow: 3px 3px 0.5em 0.1em gray;
 }
 
 .spotdetail-status {
@@ -235,24 +234,21 @@ $cloobster-font-color: #1E4776;
 
 	div.value {
 		text-align: right;
-		display: inline-block;
-		/*padding: 3px;*/
+		display: inline;
+		word-break: break-word;
 	}
 
 	div.order_placed{
 		border: 1px solid black;	
 		background-color: red;
-		/*padding: 3px;*/
 	}
 	div.payment_request{
 		border: 1px solid black;	
 		background-color: red;
-		/*padding: 3px;*/
 	}
 	div.checkedin{
 		border: 1px solid black;	
 		background-color: green;
-		/*padding: 3px;*/
 	}
 
 }
@@ -260,19 +256,16 @@ $cloobster-font-color: #1E4776;
 .spotdetail-status .order_placed{
 	border: 1px solid black;	
 	background-color: red;
-	/*padding: 3px;*/
 }
 
 .spotdetail-status .payment_request{
 	border: 1px solid black;	
 	background-color: red;
-	/*padding: 3px;*/
 }
 
 .spotdetail-status .checkedin{
 	border: 1px solid black;	
 	background-color: green;
-	/*padding: 3px;*/
 }
 
 .spotdetail-statistics {
