changed button border radius

--- a/src/res/css/app-default.scss
+++ b/src/res/css/app-default.scss
@@ -1,10 +1,8 @@
- /* Sencha Variables. */
- /* General base color for style. */
 $base-color: #6699cc;
-/* Used for action buttons and active items. */
 $active-color: #ff9933; 
 $base-gradient: 'flat';
 $button-gradient: 'flat';
+$button-radius: .2em;
 
 $list-active-color: #6699cc;
 
